# voiceinput

./: .gitignore  LICENSE  README.md  config.yaml.example  pyproject.toml
prompts/: clean.yaml  mail.yaml  mail_en.yaml
scripts/: bench_stt.py  build_control_app.sh  install_autostart.sh  mine_replacements.py  uninstall_autostart.sh
src/voiceinput/: __main__.py  app.py  config.py  feedback.py  history.py  hotkey.py  llm.py  logger.py  metrics.py  mining.py  paste.py  recorder.py  screen_context.py  state.py  stt.py  text_filter.py  user_state.py  vad.py  vocabulary.py
tests/: test_bench_cer.py  test_config.py  test_feedback.py  test_history.py  test_hotkey.py  test_llm.py  test_logger.py  test_mining.py  test_recorder.py  test_screen_context.py  test_state.py  test_stt.py  test_text_filter.py  test_user_state.py  test_vad.py  test_vocabulary.py
